@@ -3,10 +3,14 @@ package com.mentora.backend.service;
 import com.mentora.backend.dt.DtCourse;
 import com.mentora.backend.dt.DtUser;
 import com.mentora.backend.dt.DtForum;
+import com.mentora.backend.dt.DtEvaluation;
 import com.mentora.backend.model.*;
 import com.mentora.backend.repository.CourseRepository;
 import com.mentora.backend.repository.ForumRepository;
+import com.mentora.backend.repository.EvaluationRepository;
+import com.mentora.backend.repository.SimpleContentRepository;
 import com.mentora.backend.requests.CreateCourseRequest;
+import com.mentora.backend.requests.CreateEvaluationRequest;
 import java.util.*;
 import org.springframework.stereotype.Service;
 
@@ -18,7 +22,6 @@ import java.io.IOException;
 import java.time.LocalDateTime;
 import com.mentora.backend.dt.DtSimpleContent;
 import com.mentora.backend.requests.CreateSimpleContentRequest;
-import com.mentora.backend.repository.SimpleContentRepository;
 import com.mentora.backend.dt.DtFileResource;
 import com.mentora.backend.responses.GetCourseResponse;
 import com.mentora.backend.responses.BulkCreateCoursesResponse;
@@ -39,19 +42,25 @@ public class CourseService {
     private final SimpleContentRepository simpleContentRepository;
     private final FileStorageService fileStorageService;
     private final ForumRepository  forumRepository;
+    private final EvaluationRepository evaluationRepository;
+    private final EvaluationService evaluationService;
 
     public CourseService(
         CourseRepository courseRepository,
         UserCourseService userCourseService,
         SimpleContentRepository simpleContentRepository,
         FileStorageService fileStorageService,
-        ForumRepository forumRepository
+        ForumRepository forumRepository,
+        EvaluationRepository evaluationRepository,
+        EvaluationService evaluationService
     ) {
         this.courseRepository = courseRepository;
         this.userCourseService = userCourseService;
         this.simpleContentRepository = simpleContentRepository;
         this.fileStorageService = fileStorageService;
         this.forumRepository = forumRepository;
+        this.evaluationRepository = evaluationRepository;
+        this.evaluationService = evaluationService;
     }
 
     public List<DtCourse> getCoursesForUser(String ci, Role role) {
@@ -103,7 +112,22 @@ public class CourseService {
 
         List<DtSimpleContent> contents = simpleContentRepository.findByCourse_IdOrderByCreatedDateAsc(course.getId()).stream()
                 .map(this::getDtSimpleContent)
-                .collect(Collectors.toList());
+                .toList();
+        List<DtEvaluation> evaluations = evaluationRepository.findByCourse_IdOrderByCreatedDateAsc(course.getId()).stream()
+                .map(evaluationService::getDtEvaluation)
+                .toList();
+
+        List<Object> allContents = new ArrayList<>();
+        allContents.addAll(contents);
+        allContents.addAll(evaluations);
+        allContents.sort(Comparator.comparing(o -> {
+            if (o instanceof DtSimpleContent) {
+                return ((DtSimpleContent) o).getCreatedDate();
+            } else if (o instanceof DtEvaluation) {
+                return ((DtEvaluation) o).getCreatedDate();
+            }
+            return LocalDateTime.MIN;
+        }));
 
         List<Forum> forums = forumRepository.findByCourse_Id(course.getId());
 
@@ -111,7 +135,35 @@ public class CourseService {
                 .map(forum -> new DtForum(forum.getId().toString(), forum.getType().name(), course.getId()))
                 .collect(Collectors.toList());
 
-        return new GetCourseResponse(getDtCourse(course), contents, dtForums);
+        return new GetCourseResponse(getDtCourse(course), allContents, dtForums);
+    }
+
+    public Object getContentByTypeAndId(String courseId, String type, Long contentId) {
+        if (type == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Tipo de contenido obligatorio");
+        }
+        switch (type) {
+            case "simpleContent": {
+                SimpleContent sc = simpleContentRepository.findByIdAndCourse_Id(contentId, courseId);
+                if (sc == null) {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado");
+                }
+                return getDtSimpleContent(sc);
+            }
+            case "evaluation": {
+                Evaluation e = evaluationRepository.findByIdAndCourse_Id(contentId, courseId);
+                if (e == null) {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado");
+                }
+                return evaluationService.getDtEvaluation(e);
+            }
+            case "quiz": {
+                // No implementado aún
+                throw new ResponseStatusException(HttpStatus.NOT_IMPLEMENTED, "Quiz no implementado");
+            }
+            default:
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Tipo de contenido inválido");
+        }
     }
 
     public DtSimpleContent createSimpleContent(String courseId, CreateSimpleContentRequest req) throws IOException {
@@ -224,11 +276,11 @@ public class CourseService {
                     errors.add("Fila " + lineNumber + ": ID inválido (máximo 10 caracteres, solo mayúsculas y números)");
                     continue;
                 }
-                if (name == null || name.isEmpty()) {
+                if (name.isEmpty()) {
                     errors.add("Fila " + lineNumber + " (" + id + "): Nombre obligatorio");
                     continue;
                 }
-                if (professorsCell == null || professorsCell.isEmpty()) {
+                if (professorsCell.isEmpty()) {
                     errors.add("Fila " + lineNumber + " (" + id + "): Profesores asignados obligatorios");
                     continue;
                 }
@@ -267,4 +319,53 @@ public class CourseService {
 
         return new BulkCreateCoursesResponse(createdCourses, errors);
     }
+
+    public DtEvaluation createEvaluation(String courseId, CreateEvaluationRequest req) throws IOException {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Curso no encontrado"));
+
+        if (req.getFile() == null && req.getContent() == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Evaluación requiere texto o archivo");
+        }
+
+        if (req.getDueDate() == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "La fecha límite de entrega de la evaluación es obligatoria");
+        }
+
+        String fileName = null;
+        String fileUrl = null;
+        String content = null;
+
+        if (req.getFile() != null) {
+            DtFileResource file = fileStorageService.store(req.getFile());
+            fileName = file.getFilename();
+            fileUrl = file.getStoragePath();
+        }
+
+        if (req.getContent() != null) {
+            content = req.getContent();
+        }
+
+        Evaluation newEvaluation = new Evaluation(req.getTitle(), course, fileName, fileUrl, content, req.getDueDate());
+        Evaluation saved = evaluationRepository.save(newEvaluation);
+
+        return evaluationService.getDtEvaluation(saved);
+    }
+
+    public DtSimpleContent updateSimpleContent(Long contentId, CreateSimpleContentRequest req) throws IOException {
+        SimpleContent sc = simpleContentRepository.findById(contentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Contenido no encontrado"));
+
+        if (req.getTitle() != null) sc.setTitle(req.getTitle());
+        if (req.getContent() != null) sc.setContent(req.getContent());
+        if (req.getFile() != null) {
+            DtFileResource file = fileStorageService.store(req.getFile());
+            sc.setFileName(file.getFilename());
+            sc.setFileUrl(file.getStoragePath());
+        }
+
+        SimpleContent saved = simpleContentRepository.save(sc);
+        return getDtSimpleContent(saved);
+    }
+
 }
